<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".ChatActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_send_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_launcher_coinz" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/fab_send_coin"
            android:elevation="2dp"
            android:hint="@string/something_say"
            android:padding="8dp"
            android:background="@drawable/rect_oval_white"/>

        <ImageView
            android:id="@+id/imageView_send"
            android:layout_width="48dp"
            android:layout_height="36dp"
            android:layout_alignEnd="@id/editText_message"
            android:elevation="2dp"
            app:srcCompat="@drawable/ic_send_black_24dp"
            android:contentDescription="@string/send_message" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>