<resources>
    <string name="app_name">Coinz</string>
    <string name="app_name_coinz">Coinz</string>
    <string name="access_token">pk.eyJ1IjoibGl6enlsZWUyMzMiLCJhIjoiY2ptdzZmZHRyMGNxNDNrbzFkMGxqYXR6aiJ9.ruIjA_TsqMFDcsib8I5rUA</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="coin_in_bank">Go Banking!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trade_coinz">TradeCoinzActivity</string>
...
    <string name="today_rate">Rate of the day</string>
    <string name="convert_to_gold">Exchange gold!</string>
    <string name="camp_is_AI">"camp:\nAI"</string>
    <string name="camp_is_human">"camp:\nHuman"</string>
    <string name="register">Register</string>
    <string name="input_email_address">  input your email address here</string>
    <string name="sign_in">Sign in</string>
    <string name="input_password">  input your password here</string>
    <string name="input_your_friend_email">Input your friend\'s email here!</string>
    <string name="hint_no_coin">Oops! No coin left.</string>
    <string name="email_input">  input your email address here</string>
    <string name="click_something_to_operate">Click the bottom option to operate</string>
    <string name="no_coin_in_wallet">Oops! You have no spare coinz you yourself collected in your wallet</string>
...
