...

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:id="@+id/frag_honor_board"
        android:background="@drawable/roundedbackground"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="40dp"
...
